# mssa

./: .gitignore  .gitmodules  Cargo.toml  README.md  benchmark.sh  parse.py  visualize.py
src/: fasta.rs  int_vec.rs  iter_order_by.rs  kmer.rs  main.rs  sa.rs  suffix_array.rs  transform.rs
test_input/: Drosophila_melanogaster_chromosome_Y.fasta  dmel.fasta
test_input/ENA_bacteria/: SAMD00000344.contigs.fa  SAMEA1316495.contigs.fa  SAMEA1712746.contigs.fa  SAMN03462183.contigs.fa
