[package]
name = "mssa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bimap = "0.6.3"
bitvec = { version = "1.0.1", features = ["serde"] }
bloom = "0.3.2"
clap = { version = "4.5.37", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
